...
      }
    },
    "(none)" : {

    },
...

    },
    "⌚ Recently Viewed" : {

    },
    "⭐ Ratings" : {

    },
    "💖 Favorites" : {

    },
...
      "isCommentAutoGenerated" : true
    },
    "Apply" : {

    },
...

    },
    "Cheap" : {

    },
...
      "isCommentAutoGenerated" : true
    },
    "Cuisine" : {

    },
...

    },
    "dinner" : {
      "comment" : "Meal type for dinner.",
      "isCommentAutoGenerated" : true
...

    },
    "Done" : {

    },
...

    },
    "Error: Calories must be ≤ 2000" : {

    },
...

    },
    "Error: Max calories cannot exceed min calories" : {

    },
...

    },
    "Favorite this recipe" : {

    },
...

    },
    "Find Me a Recipe!" : {

    },
...

    },
    "food" : {

    },
...

    },
    "Getting your profile ready… 🧑‍🍳" : {

    },
...

    },
    "Gluten-Free" : {

    },
...
      "isCommentAutoGenerated" : true
    },
    "Healthy" : {

    },
...

    },
    "Home" : {

    },
...
      "isCommentAutoGenerated" : true
    },
    "Ingredients" : {

    },
...
      "isCommentAutoGenerated" : true
    },
    "Italian" : {
      "comment" : "Name of an Italian cuisine.",
      "isCommentAutoGenerated" : true
...
      "isCommentAutoGenerated" : true
    },
    "kcal" : {

    },
...
      "isCommentAutoGenerated" : true
    },
    "Login" : {

    },
...
      "isCommentAutoGenerated" : true
    },
    "lunch" : {
      "comment" : "A meal type that is a meal for lunch.",
      "isCommentAutoGenerated" : true
    },
    "main course" : {
      "comment" : "Display names for each meal type.",
      "isCommentAutoGenerated" : true
    },
    "main dish" : {
      "comment" : "Display name for the meal type \"main dish\".",
      "isCommentAutoGenerated" : true
...
      "isCommentAutoGenerated" : true
    },
    "Meal Type" : {

    },
...
      "isCommentAutoGenerated" : true
    },
    "mild" : {
      "comment" : "The mild spice level.",
      "isCommentAutoGenerated" : true
...

    },
    "Next" : {

    },
...

    },
    "none" : {
      "comment" : "The name of the spice level when the user has not selected any spice level.",
      "isCommentAutoGenerated" : true
...

    },
    "OK" : {

    },
...

    },
    "Powered by spoonacular" : {

    },
...

    },
    "Previous" : {

    },
...
      "isCommentAutoGenerated" : true
    },
    "Recipe" : {

    },
...

    },
    "Results" : {

    },
...
      "isCommentAutoGenerated" : true
    },
    "Search" : {

    },
    "Search for recipes by applying filters from the navigation menu." : {

    },
...

    },
    "Share this recipe" : {

    },
    "Show Me Another Recipe!" : {

    },
...

    },
    "Sign in to view your saved recipes" : {

    },
...
      "isCommentAutoGenerated" : true
    },
    "Spice Level" : {

    },
...

    },
    "spicy" : {
      "comment" : "The spice level of the item.",
      "isCommentAutoGenerated" : true
...

    },
    "Steps" : {

    },
...

    },
    "Summary" : {

    },
    "Sustainable" : {

    },
...
      "isCommentAutoGenerated" : true
    },
    "Un-favorite this recipe" : {

    },
...
      "isCommentAutoGenerated" : true
    },
    "Vegan" : {

    },
    "Vegetarian" : {

    },
...
